---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
E24.py:2:8: E241 Multiple spaces after comma
  |
1 | #: E241
2 | a = (1,  2)
  |        ^^ E241
3 | #: Okay
4 | b = (1, 20)
  |

E24.py:11:18: E241 Multiple spaces after comma
   |
 9 | #: E241 E241 E241
10 | # issue 135
11 | more_spaces = [a,    b,
   |                  ^^^^ E241
12 |                ef,  +h,
13 |                c,   -d]
   |

E24.py:12:19: E241 Multiple spaces after comma
   |
10 | # issue 135
11 | more_spaces = [a,    b,
12 |                ef,  +h,
   |                   ^^ E241
13 |                c,   -d]
   |

E24.py:13:18: E241 Multiple spaces after comma
   |
11 | more_spaces = [a,    b,
12 |                ef,  +h,
13 |                c,   -d]
   |                  ^^^ E241
   |


